Adding access level and user removal
