# app/controllers/UserController.scala
@@ -8,6 +8,7 @@ import play.api.libs.json.Json
 import play.api.mvc.{Action, BodyParsers, Controller}
 import services.UserService
 import models.ImplicitFormats._
+import models.AccessLevel
 
 import scala.concurrent._
 import ExecutionContext.Implicits.global
@@ -15,13 +16,20 @@ import ExecutionContext.Implicits.global
 @Singleton
 class UserController @Inject()(userService: UserService, auth: Authentication) extends Controller {
 
-  def getUserById(userId: Int): Action[Unit] = auth.UserAction.async(BodyParsers.parse.empty) { _ =>
+  def getUserById(userId: Int): Action[Unit] = auth.UserAction().async(BodyParsers.parse.empty) { _ =>
     for {
       user <- userService.getUserById(userId) ?| ApiErrors.USER_NOT_FOUND
     } yield Ok(Json.toJson(user))
   }
 
-  def getAllUsers: Action[Unit] = auth.UserAction.async(BodyParsers.parse.empty) { _ =>
+  def getAllUsers: Action[Unit] = auth.UserAction(AccessLevel.Management).async(BodyParsers.parse.empty) { _ =>
     userService.getAll.map ( users => Ok(Json.toJson(users)) )
+  }
+
+  def removeUser(userId:Int): Action[Unit] = auth.UserAction(AccessLevel.Management).async(BodyParsers.parse.empty) { _ =>
+    for {
+      _ <- userService.removeUser(userId) ?| ApiErrors.USER_NOT_FOUND
+    } yield NoContent
+
   }
 }
